# SimulatorSoccer

./: .gitignore  CLAUDE.md  README.md  modelo.pth  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: release.yml
Python/: ball.py  control.py  data.py  field.py  main.py  neural.py  robot.py  teste.py
Simulador/: .project
Simulador/Client/: Interface.java
Simulador/src/: debbug.py  interface.py  main.h  main.py  robot.py
Simulador/src/main/: Configura.java  Controle.java  Simulator.java
Simulador/src/object/: Ball.java  Object.java  Robot.java
Simulador/src/screen/: Configura.java  CreateRobot.java  Serial.java  SetBall.java
Teste/: teste.py
bridge/: README.md  __init__.py  setup.py
bridge/cpp/: attacker.cpp  hal.hpp
docs/: design_camera_sim.md
examples/: attacker_strategy.py  defender_strategy.py  fuzzy_strategy.py  simple_strategy.py  state_machine_strategy.py  vision_strategy.py
frontend/: .env.tauri  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  config.js  i18n.js  index.css  main.jsx  prefs.jsx  updater.js
frontend/src/components/: PrefsPanel.jsx  RobotPreview.jsx  SimViewer.css  SimViewer.jsx
packaging/: rcj-server.spec
rl/: __init__.py  env.py  selfplay.py  soccer_pz.py  train.py
robots/: example.yaml  goalkeeper_diff.yaml  goalkeeper_v2.yaml  striker_omni.yaml  striker_v3.yaml
robots/meshes/: demo.glb
server/: desktop.py  main.py  paths.py
sim/: __init__.py  __main__.py  ball.py  camera.py  config_loader.py  constants.py  engine.py  field.py  hal.py  hal_hardware.py  hal_sim.py  kicker_test.py  percepts.py  recorder.py  referee.py  robot.py  types.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tests/: test_camera.py  test_config_loader.py  test_cpp_bridge.py  test_dribbler_kicker.py  test_new_sensors.py  test_percepts.py  test_physics.py  test_referee.py  test_rl_env.py  test_selfplay.py  test_server.py  test_validation.py  test_visual.py
viewer/: __init__.py  pygame_viewer.py
