[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "rcj-soccer-sim"
version = "0.1.0"
description = "RoboCup Junior Soccer Simulator"
requires-python = ">=3.10"
dependencies = [
    "pymunk>=6.6",
    "pyyaml>=6.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
# pygame só é usado pelo viewer 2D local (import lazy em sim/__main__.py);
# fora das deps core para nenhum instalador de deploy tentar compilá-lo.
viewer = [
    "pygame>=2.5",
]
server = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "websockets>=12.0",
]
cpp = [
    "pybind11>=2.12",
]
rl = [
    "gymnasium>=0.29",
    "stable-baselines3>=2.2",
    "pettingzoo>=1.24",
]

[project.scripts]
rcj-sim = "sim.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sim*", "viewer*", "examples*", "bridge*"]
